[tool.poetry]
name = "sb-bot-new"
version = "0.1.0"
description = ""
authors = ["Mikhail Nosaev <nosaev.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = ">=3.8.0,<3.10.0"
aiogram-calendar = "^0.5.0"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.3.4"
pytils = "^0.4.1"
pytz = "^2024.1"
aiocsv = "^1.3.2"
gspread = "<6.1.0"
pandas = "^2.2.2"
pprintpp = "^0.4.0"
google-api-python-client = "^2.136.0"
alive-progress = "^3.1.5"
pydantic = ">=2.4.1,<2.8"
aiohttp = ">=3.9.0b0,<3.10.0"
redis = "^5.0.7"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
apscheduler = "^3.10.4"
apscheduler-di = "^0.1.0"
gspread-asyncio = "^2.0.0"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
